[package]
name = "order-book-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# rust_decimal = "1.26"
# rust_decimal_macros = "1.26"
roxmltree = "0.15.1"
ordered-float = "3.3.0"
binary-heap-plus = "0.5.0"
# comparator = "0.3.0"
compare = "0.1.0"